# ansible-role-pip

./: .travis.yml  .yamllint  Makefile  README.md  molecule.yml  playbook.yml  pyproject.toml  requirements.yml
.github/workflows/: lint.yml  main.yml  molecule.yml  release.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: Dockerfile.j2  converge.yml  create.yml  destroy.yml  molecule.yml  verify.yml
molecule/default/tests/: test_default.py
tasks/: main.yml
tests/: test_command.py
vars/: Archlinux.yml  Debian.yml  RedHat.yml  Ubuntu.yml  debian.yml  ubuntu-bionic.yml  ubuntu-focal.yml
