[tool.poetry]
name = "nephelaiio.pip"
version = "0.1.0"
description = ""
authors = ["Ted Cook <teodoro.cook@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
yamllint = "^1.33.0"
ansible = "^8.5.0"
molecule-docker = "^2.1.0"
molecule = "^6.0.2"
ansible-lint = { version = "^6.22.0", markers = "platform_system != 'Windows'" }
netaddr = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
