[tool.poetry]
name = "nephelaiio.pip"
version = "0.1.0"
description = ""
authors = ["Ted Cook <teodoro.cook@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "^24.5.0", markers = "platform_system != 'Windows'" }
ansible = "^9.6.0"
molecule = "^24.2.1"
molecule-plugins = "^23.5.3"
yamllint = "^1.35.1"
netaddr = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
